# human-flourishing-platform

./: .npmrc  CLAUDE.md  DEPLOY-CHECKLIST.md  UX-AUDIT.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json  vitest.config.ts
blockchain/: Anchor.toml  Cargo.toml  DEPLOY.md  PREFLIGHT.md  README.md  setup-wsl.sh
blockchain/bridge/: claim-tokens.ts
blockchain/programs/found-token/: Cargo.toml
blockchain/programs/found-token/src/: lib.rs
blockchain/programs/governance/: Cargo.toml
prisma/: schema.prisma
prisma/migrations/20260421_add_userdata_auditlog/: migration.sql
public/: manifest.json  robots.txt
scripts/: deploy-prep.sh
src/: proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/(auth)/: layout.tsx
src/app/(platform)/: layout.tsx
src/components/: AletheiaConnection.tsx  ErrorBoundary.tsx  PageTracker.tsx
src/components/aly/: AlyVoice.tsx
src/components/dashboard/: ActivityFeed.tsx  DailyCheckIn.tsx  DailyProgress.tsx  DailyRhythm.tsx  Discover.tsx  FrequentTools.tsx  HealthSnapshot.tsx  HiveActivity.tsx  LevelUnlocks.tsx  ModuleCard.tsx  (+7 more)
src/hooks/: use-secure-api.ts  use-synced-storage.ts
src/lib/: ai.ts  aletheia-bridge.ts  api-handler.ts  audit.ts  auth.ts  claims.ts  client-encryption.ts  constants.ts  csrf.ts  design.ts  email.ts  encrypted-fetch.ts  secure-api.ts  security.ts  tokens.ts  utils.ts
src/types/: next-auth.d.ts
tests/: aletheia-bridge.test.ts  api-validation.test.ts  constants.test.ts  modules.test.ts  security.test.ts  utils.test.ts
(+367 files in other folders)
