[package]
name = "found-token"
version = "0.1.0"
description = "FOUND Token — Human Flourishing Platform utility token on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "found_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
